--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "nextjs-starter",
-  "version": "0.1.0",
-  "private": true,
+  "description": "开箱即用的基于 Next.js + Vant + TailwindCSS + TypeScript 的模板",
+  "version": "1.0.0",
+  "keywords": [
+    "Next.js",
+    "React",
+    "Vant",
+    "TailwindCSS",
+    "TypeScript",
+    "ESLint",
+    "Prettier"
+  ],
+  "author": "welives",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +20,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-vant/icons": "^0.0.10",
+    "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-vant": "^3.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.5",
+    "postcss": "^8",
+    "postcss-px-to-viewport-8-plugin": "^1.2.3",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
