--- a/package.json
+++ b/package.json
@@ -20,27 +20,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-vant/icons": "^0.0.10",
     "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-vant": "^3.3.4"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20.12.11",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "13.5.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "next-compose-plugins": "^2.2.1",
-    "next-images": "^1.8.5",
-    "postcss": "^8.4.38",
-    "postcss-px-to-viewport-8-plugin": "^1.2.5",
+    "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5"
   }
 }
