--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "nextjs-starter",
-  "description": "开箱即用的基于 Next.js + Vant + TailwindCSS + TypeScript 的模板",
+  "description": "开箱即用的基于 Next.js + TailwindCSS + Prettier + TypeScript 的模板",
   "version": "1.0.0",
   "keywords": [
     "Next.js",
     "React",
-    "Vant",
     "TailwindCSS",
     "TypeScript",
     "ESLint",
@@ -17,7 +16,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
@@ -30,15 +30,19 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.18.0",
+    "@eslint-react/eslint-plugin": "^1.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-format": "^0.1.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^5"
